apps/nginx-ingress/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/part-of: web-platform
    env: prod
