apps/nginx-ingress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: web-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/part-of: web-platform
spec:
  selector:
    app.kubernetes.io/name: nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
